daemonset-netdata-slave.yml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: netdata-slave
  namespace: netdata
  labels:
    tier: netdata
    app: netdata-slave
    version: v1
spec:
  selector:
    matchLabels:
      name: netdata
  template:
    metadata:
      labels:
        name: netdata
    spec:
      hostPID: true
      hostIPC: true
      hostNetwork: true
      containers:
        - resources:
            requests:
              cpu: 0.15
          securityContext:
            privileged: true
          image: fzerorubigd/netdata
          name: netdata
          volumeMounts:
            - name: proc
              mountPath: /host/proc
              readOnly: true
            - name: run
              mountPath: /var/run/docker.sock
            - name: sys
              mountPath: /host/sys
            - name: cache
              mountPath: /var/cache/netdata
      volumes:
        - name: proc
          hostPath:
              path: /proc
        - name: run
          hostPath:
              path: /var/run/docker.sock
        - name: sys
          hostPath:
              path: /sys
        - name: cache
          hostPath:
              path: /global/netdata/cache
