dc-nginx.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    service: nginx
  name: nginx
  namespace: netdata
spec:
  replicas: 1
  selector:
    app: nginx
    deploymentconfig: nginx
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: nginx
        deploymentconfig: nginx
    spec:
      containers:
        - env:
            - name: BASIC_AUTH_USERNAME
              value: netdata
            - name: BASIC_AUTH_PASSWORD
              value: NeverGonnaLetYouDown!
          name: nginx
          image: amazeeio/nginx
          imagePullPolicy: IfNotPresent
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      tolerations:
        - effect: NoSchedule
          key: node-role.kubernetes.io/master
          operator: Exists
  test: false
  triggers:
    - type: ConfigChange
