netdata-pod.yml

apiVersion: v1
kind: Pod
metadata:
  name: netdata-master
  namespace: netdata
spec:
  hostPID: true
  hostIPC: true
  hostNetwork: true
  ## The following section is required if you want to run it in a normal pod in master node
  tolerations:
  - key: node-role.kubernetes.io/master
    operator: Exists
    effect: NoSchedule
  containers:
  - name: netdata
    image: fzerorubigd/netdata
    imagePullPolicy: IfNotPresent
    securityContext:
      privileged: true
    volumeMounts:
      - name: proc
        mountPath: /host/proc
        readOnly: true
      - name: run
        mountPath: /var/run/docker.sock
      - name: sys
        mountPath: /host/sys
      - name: health
        mountPath: /etc/netdata/health.d
  volumes:
    - name: proc
      hostPath:
        path: /proc
    - name: run
      hostPath:
        path: /var/run/docker.sock
    - name: sys
      hostPath:
        path: /sys
    - name: health
      hostPath:
        path: /global/netdata/health.d
