service-netdata.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: netdata-master
  name: netdata-master
  namespace: netdata
spec:
  ports:
    - name: http
      port: 19999
      protocol: TCP
      targetPort: 19999
  selector:
    app: netdata-master
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
