service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: nginx
  name: nginx
  namespace: netdata
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: nginx
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
