service.yml
kind: Service
apiVersion: v1
metadata:
  name: netdata-master
  namespace: netdata
spec:
  type: ExternalName
  ports:
  - port: 19999
  externalName: 192.168.10.1
